--- a/Valores.html
+++ b/Valores.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ventaja Competitiva</title>
+	<title>Valores</title>
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 	<link rel="stylesheet" type="text/css" href="estilos.css">
@@ -13,37 +13,28 @@
 	<div class="menu">
 		<ul>
 			<li> <a href="index.html"><span class="icon-home3"></span>Inicio</a></li>
-			<li><a href="Ventaja Competitiva.html"><span class="icon-file-text2"></span>Ventaja Competitiva</a>
+			<li><a href="Valores.html"><span class="icon-file-text2"></span>Valores</a>
            
 			<ul>
 			    <li><a href="galeria.html"><span class="icon-images"></span>Galeria</a></li>
 			    <li><a href=""><span class="icon-film"></span>Videos</a></li>
-	</div>
-	   
-        <center><p></p></center>
-	<div id="textoPr">
-	<center><center><marquee direction="up"> 
-<h6><img src="imagenes/venta.jpg"></h6>
-</marquee></center></center>
+	
+</div>
 
-	<br> <br>
-Nuestra empresa se ubica en un lugar con mayor habitantes lo que eso facilita el consumo y mayor ventas,se utilizara un sistema de ventas que a diferencia de otras no tiene,lo que sera mas accesible el consumo de cualquier pastel.
+<div id="textoPr">
+<center><marquee direction="up"> 
+<h4><img src="imagenes/VA.png"></h4>
+</marquee></center>
+<h4><p><img src="imagenes/PU.png" >
+<h4><p> <img src="imagenes/RE.png" >
+<h4><p> <img src="imagenes/res.png" >
+<h4><p> <img src="imagenes/exi.png" >
+<h4><p> <img src="imagenes/com.png">
 
-
-     <br>
-	<br>
-	<center><img src="imagenes/venja.jpg" width="450" heigh="700"> <img src="imagenes/venja1.jpg" width="400" heigh="400"></center>
-	<center>
-	<object type="application/x-shockwave-flash"
-	data="imagenes/pastelerias trabajo.swf"
-	width="500" height="500">
-	<param name="movie" value="imagenes/pastelerias trabajo.swf"/>
-	<param name="quality" value="higth"/>
-</center></object>
+	
+	
 </div>
 	
-</body>
-
 	
                                       <div class="social">
                                         <a href="https://www.facebook.com/" class="icon icon-facebook" target="_black"></a>
@@ -52,4 +43,5 @@ Nuestra empresa se ubica en un lugar con mayor habitantes lo que eso facilita el
                                         <a href="https://www.instagram.com/" class="icon icon-instagram" target="_black"></a>
                                       </div> 
 
+</body>
 </html>
