--- a/juego.html
+++ b/juego.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ventaja Competitiva</title>
+	<title>Juego</title>
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 	<link rel="stylesheet" type="text/css" href="estilos.css">
@@ -9,47 +9,38 @@
 	<link rel="stylesheet" type="text/css" href="estilosgaleria.css">
 	<link rel="stylesheet" type="text/css" href="EstilosRedSocial.css">
 </head>	
-	<body background="imagenes/23.gif">
+	<body background="imagenes/caf1.gif">
 	<div class="menu">
 		<ul>
 			<li> <a href="index.html"><span class="icon-home3"></span>Inicio</a></li>
-			<li><a href="Ventaja Competitiva.html"><span class="icon-file-text2"></span>Ventaja Competitiva</a>
+			<li><a href="juego.html"><span class="icon-file-text2"></span>Juego</a>
            
 			<ul>
 			    <li><a href="galeria.html"><span class="icon-images"></span>Galeria</a></li>
 			    <li><a href=""><span class="icon-film"></span>Videos</a></li>
 	</div>
-	   
-        <center><p></p></center>
-	<div id="textoPr">
-	<center><center><marquee direction="up"> 
-<h6><img src="imagenes/venta.jpg"></h6>
-</marquee></center></center>
 
-	<br> <br>
-Nuestra empresa se ubica en un lugar con mayor habitantes lo que eso facilita el consumo y mayor ventas,se utilizara un sistema de ventas que a diferencia de otras no tiene,lo que sera mas accesible el consumo de cualquier pastel.
-
-
-     <br>
-	<br>
-	<center><img src="imagenes/venja.jpg" width="450" heigh="700"> <img src="imagenes/venja1.jpg" width="400" heigh="400"></center>
+	<center><marquee direction="up"> 
+<h2><img src="imagenes/juin.jpg"></h2>
+</marquee> </center>
 	<center>
 	<object type="application/x-shockwave-flash"
-	data="imagenes/pastelerias trabajo.swf"
-	width="500" height="500">
-	<param name="movie" value="imagenes/pastelerias trabajo.swf"/>
+	data="imagenes/Funny Game.swf"
+	width="700" height="700">
+	<param name="movie" value="imagenes/Funny Game.swf"/>
 	<param name="quality" value="higth"/>
-</center></object>
+</object>
+</center>
 </div>
-	
-</body>
 
 	
+	
                                       <div class="social">
-                                        <a href="https://www.facebook.com/" class="icon icon-facebook" target="_black"></a>
+                                        <a href="https://www.facebook.com" class="icon icon-facebook" target="_black"></a>
                                         <a href="https://twitter.com/" class="icon icon-twitter" target="_black"></a>
                                         <a href="https://www.youtube.com/" class="icon icon-youtube" target="_black"></a>
                                         <a href="https://www.instagram.com/" class="icon icon-instagram" target="_black"></a>
                                       </div> 
 
-</html>
+</body>
+</html>km i
